# sky_django

./: pyproject.toml
task_19_1/: index.html  web_app.py
task_19_2/: .env.example
task_19_2/catalog/: admin.py  models.py  views.py
task_19_2/templates/: contacts.html
task_19_2/web_django/: settings.py  urls.py
task_20_1/catalog/: models.py  views.py
task_20_1/data/: products.json
task_20_1/templates/: contacts.html  index.html
task_20_1/web_django/: settings.py  urls.py
task_20_2/: pyproject.toml
task_20_2/catalog/: admin.py  views.py
task_20_2/data/: fill_db_with_shell.py
task_20_2/templates/: index.html
task_20_2/web_django/: urls.py
task_21.1/: .env.example
task_21.1/catalog/: admin.py  models.py  views.py
task_21.1/templates/: index.html
task_21.1/web_django/: settings.py  urls.py
task_22.1/: .gitignore
task_22.1/catalog/: admin.py  models.py  views.py
task_22.1/data/: categories.json
task_22.1/web_django/: urls.py
task_22.2/catalog/: forms.py  models.py  views.py
task_22.2/web_django/: urls.py
task_23.1/: .env.example  pyproject.toml
task_23.1/catalog/: views.py
task_23.1/templates/: index.html
task_23.1/users/: admin.py  forms.py  views.py
task_23.2/catalog/: admin.py  mixins.py
task_23.2/data/: fill_db_with_shell.py
task_23_1/: .env.example
task_23_2/: README.md  pyproject.toml
task_23_2/templates/: base.html  contacts.html
task_23_2/templates/products/: delete.html  detail.html
task_23_2/templates/site/: header.html
task_23_2/users/: models.py
task_23_2/web_django/: settings.py  urls.py
(+33 files in other folders)
